Settings nav anchor link with smooth scroll, resolved margin spacing issue

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -68,8 +68,6 @@ footer.page-footer {
 .container-profile {
 	min-height: 1000px;
 	color: white;
-	/*background-color: black !important;*/
-   /* background: rgba(105, 105, 105, .3) !important;*/
 	column-count: 3;
 	line-height: 2;
 	width: 95%;
@@ -77,7 +75,6 @@ footer.page-footer {
     -moz-column-gap: 0;
     -webkit-column-gap: 0;
     column-gap: 0;
-    /*border-radius: 10px;*/
     border: white solid 15px;
     padding: 10px auto;
 }
@@ -89,14 +86,13 @@ footer.page-footer {
 .container-rgb {
 	width: 95%;
 	margin: 20px auto;
-
 }
+
 .rgb-image {
 	margin: 10px auto;
 	border: 2px solid white;
-
-
 }
+
 profile-display img {
 /*	padding: 10px;
 */}
@@ -111,12 +107,6 @@ profile-display img {
 nav .brand-logo {
     display: flex;
     align-items: center;
-    padding: 5px;
-    width: 200px;
-}
-
-.brand-logo {
-	width: 100px;
 }
 
 #settings {
@@ -175,6 +165,10 @@ nav .brand-logo {
 .profile-img img {
 	width: 100%;
 	margin: 0;
+}
+
+.row .col {
+	padding: 0;
 }
 
 .profile-img__overlay {
